myapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: myapp
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
